$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V4.070
~~~~~~~~~~~~~~~~~

   o improved transpose handling if loopback track is running with sustain enabled,
     or with notes > step length (glide)


MIDIboxSEQ V4.069
~~~~~~~~~~~~~~~~~

   o USB MSD driver: changed endpoint to avoid conflict with MIDI driver.
     Note that it's still not possible to use MSD and MIDI in parallel,
     but Windows and MacOS should accept the connection (again).

   o Event configuration page: the selected layer type now has to be confirmed with 
     GP button below the appr. item.
     A warning message will pop up to notify about this unusual data entry method.
     In addition, the value will be marked with '!' as long as it doesn't match with
     currently active value.

    o it's now possible to delete a session from the main page


MIDIboxSEQ V4.068
~~~~~~~~~~~~~~~~~

   o support for GM5 driver under Windows.
     MacOS and Linux users: just install this update, no additional changes required.
     Windows users:
     - upload the application with MIOS Studio
     - close MIOS Studio
     - install the GM5 driver which can be downloaded from http://www.ucapps.de/mios32_download.html
     - start MIOS Studio -> 4 "GM5" USB ports should be visible


MIDIboxSEQ V4.067
~~~~~~~~~~~~~~~~~

   o USB device settings have been changed.
     IMPORTANT: please install MIOS32 Bootloader V1.010 before uploading
     the application! Otherwise code upload via USB won't work anymore!
     (Backup: upload via MIDI IN1/OUT1)

   o support for MIOS Filebrowser, which will be part of MIOS Studio 2.4


MIDIboxSEQ V4.066
~~~~~~~~~~~~~~~~~

   o fixed potential stack overflow in LPC17 build


MIDIboxSEQ V4.065
~~~~~~~~~~~~~~~~~

   o the DEBOUNCE_DELAY parameter of the MBSEQ_HW.V4 file will now be also taken
     for the BLM8X8 (Wilba's Frontpanel)

   o Mixer: setup now automatically loaded when a new mixer map is selected
